syntax = "proto3";

package parquet_options;

option go_package = "github.com/reemote/protoc-gen-parquet/parquet_options";

import "google/protobuf/descriptor.proto";

message MessageOptions {
  // As long as table_name is not blank,
  // a schema is generated for top-level messages in each file.
  string table_name = 1;
}

extend google.protobuf.MessageOptions {
  MessageOptions message_opts = 1023;
}

enum TimestampType {
  UNSPECIFIED = 0;
  TIMESTAMP_MILLIS = 1;
  TIMESTAMP_MICROS = 2;
  TIMESTAMP_NANOS = 3;
}

message FieldOptions {
  TimestampType timestamp_type = 1;
}

extend google.protobuf.FieldOptions {
  FieldOptions field_opts = 1023;
}
